Fixing whitespace under home bg-img

--- a/styles.css
+++ b/styles.css
@@ -216,8 +216,8 @@ nav {
 }
 
 .home .bg-img {
-  max-width: 100%;
-  height: auto;
+  width: 100%;
+  height: 100%;
   position: absolute;
   left: 0;
   bottom: 0;
